<resources>
    <string name="app_name">BTJoystick</string>
    <string name="title_activity_joystick">JoystickActivity</string>
    <string name="dummy_button">Fx</string>
    <string name="f00">F0</string>
    <string name="f01">F1</string>
    <string name="f02">F2</string>
    <string name="f03">F3</string>
    <string name="f04">F4</string>
    <string name="f05">F5</string>
    <string name="f06">F6</string>
    <string name="f07">F7</string>
    <string name="f08">F8</string>
    <string name="f09">F9</string>
    <string name="f10">FA</string>
    <string name="f11">FB</string>
    <string name="f12">FC</string>
    <string name="f13">FD</string>
    <string name="f14">FE</string>
    <string name="f15">FF</string>
    <string name="b00">T0</string>
    <string name="b01">T1</string>
    <string name="b02">T2</string>
    <string name="b03">T3</string>
    <string name="b04">T4</string>
    <string name="b05">T5</string>
    <string name="b06">T6</string>
    <string name="b07">T7</string>
    <string name="b08">T8</string>
    <string name="b09">T9</string>
    <string name="b10">TA</string>
    <string name="b11">TB</string>
    <string name="b12">TC</string>
    <string name="b13">TD</string>
    <string name="b14">TE</string>
    <string name="b15">TF</string>
    <string name="joystick_background">Joystick Background</string>
    <string name="joystick_thumbstick">Joystick Thumbstick</string>
    <string name="values_for_x_axis">Values for X Axis</string>
    <string name="values_for_y_axis">Values for Y Axis</string>
    <string name="click_to_clear">Click here to clear the logs.</string>
    <string name="connection_state_icon">Connection state icon</string>
    <string name="cleared_screen">Cleared screen.</string>
    <string name="opening_settings_screen">Opening Settings Screen.</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>