<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.BTJoystick.FullscreenContainer"
    tools:context=".JoystickActivity">

    <com.efhilton.utils.btjoystick.JoystickView
        android:id="@+id/thumbstick_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:background="@drawable/rounded_corner_background"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/thumbstick_right"
        app:layout_constraintStart_toEndOf="@+id/thumbstick_left"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Switches (Rows 0-4) -->
        <CheckBox
            android:id="@+id/switch00"
            style="@style/CheckboxStyle"
            android:text="@string/f00" />

        <CheckBox
            android:id="@+id/switch01"
            style="@style/CheckboxStyle"
            android:text="@string/f01" />

        <CheckBox
            android:id="@+id/switch02"
            style="@style/CheckboxStyle"
            android:text="@string/f02" />

        <CheckBox
            android:id="@+id/switch03"
            style="@style/CheckboxStyle"
            android:text="@string/f03" />

        <CheckBox
            android:id="@+id/switch04"
            style="@style/CheckboxStyle"
            android:text="@string/f04" />

        <CheckBox
            android:id="@+id/switch05"
            style="@style/CheckboxStyle"
            android:text="@string/f05" />

        <CheckBox
            android:id="@+id/switch06"
            style="@style/CheckboxStyle"
            android:text="@string/f06" />

        <CheckBox
            android:id="@+id/switch07"
            style="@style/CheckboxStyle"
            android:text="@string/f07" />

        <CheckBox
            android:id="@+id/switch08"
            style="@style/CheckboxStyle"
            android:text="@string/f08" />

        <CheckBox
            android:id="@+id/switch09"
            style="@style/CheckboxStyle"
            android:text="@string/f09" />

        <CheckBox
            android:id="@+id/switch10"
            style="@style/CheckboxStyle"
            android:text="@string/f10" />

        <CheckBox
            android:id="@+id/switch11"
            style="@style/CheckboxStyle"
            android:text="@string/f11" />

        <Button
            android:id="@+id/button00"
            style="@style/ButtonStyle"
            android:text="@string/b00" />

        <Button
            android:id="@+id/button01"
            style="@style/ButtonStyle"
            android:text="@string/b01" />

        <Button
            android:id="@+id/button02"
            style="@style/ButtonStyle"
            android:text="@string/b02" />

        <Button
            android:id="@+id/button03"
            style="@style/ButtonStyle"
            android:text="@string/b03" />

        <Button
            android:id="@+id/button04"
            style="@style/ButtonStyle"
            android:text="@string/b04" />

        <Button
            android:id="@+id/button05"
            style="@style/ButtonStyle"
            android:text="@string/b05" />

        <Button
            android:id="@+id/button06"
            style="@style/ButtonStyle"
            android:text="@string/b06" />

        <Button
            android:id="@+id/button07"
            style="@style/ButtonStyle"
            android:text="@string/b07" />

        <Button
            android:id="@+id/button08"
            style="@style/ButtonStyle"
            android:text="@string/b08" />

        <Button
            android:id="@+id/button09"
            style="@style/ButtonStyle"
            android:text="@string/b09" />

        <Button
            android:id="@+id/button10"
            style="@style/ButtonStyle"
            android:text="@string/b10" />

        <Button
            android:id="@+id/button11"
            style="@style/ButtonStyle"
            android:text="@string/b11" />

    </GridLayout>

    <com.efhilton.utils.btjoystick.JoystickView
        android:id="@+id/thumbstick_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>